# drone-research-lab

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
drl/: __init__.py  cli.py  config.py  connection.py  motion.py  recording.py  session.py  signals.py  telemetry.py  timing.py
drl/dashboard/: __init__.py  app.py  demo.py  frames.py  publisher.py
drl/dashboard/static/: index.html  styles.css
drl/dashboard/static/js/: battery.js  cloud.js  constants.js  (+9 more)
drl/plots/: __init__.py  charts.py
drl/sensors/: __init__.py  _units.py  flow.py  multiranger.py  ranger.py  sensors.py
drl/viz/: __init__.py  plots.py
experiments/: __init__.py  common.py
experiments/basic_flight/: README.md  run.py
experiments/occupancy_mapping/: README.md  mapper.py  run.py
experiments/proximity_hud/: README.md  run.py
experiments/proximity_sensing/: README.md  run.py
experiments/reactive_flight/: README.md  run.py
experiments/slam/: README.md  demo.py  explorer.py  mapper.py  pointcloud.py  run.py  scan_match.py
experiments/slam_mapping/: README.md  explorer.py  mapper.py  pointcloud.py  run.py  scan_match.py
experiments/state_estimation/: README.md  filters.py  run.py
experiments/trajectory_tracking/: README.md  controller.py  demo.py  run.py  trajectory.py
scripts/: connect_check.py  dashboard_demo.py
tests/: conftest.py  test_connection.py  test_controller.py  test_dashboard_frames.py  test_explorer.py  test_pointcloud.py  test_sensors.py  test_slam_mapper.py  test_slam_run.py  test_state_estimation_filters.py  test_timing.py  test_trajectory.py
